name: CNidentd
version: 0.1
cabal-version: -any
build-type: Simple
license: BSD3
license-file: ""
copyright:
maintainer:
build-depends: base -any, haskell98 -any, hdaemonize -any,
               network -any, process -any
stability:
homepage:
package-url:
bug-reports:
synopsis: A small IDENT server in Haskell
description: A small IDENT server in Haskell
category:
author:
tested-with:
data-files:
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: cnidentd
main-is: CNidentd.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: .
other-modules: OSXIdentHandler SimpleIdentHandler TestIdentHandler
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: